external-crates/move/crates/move-compiler/tests/move_check/verification/single_module_valid.exp
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/verification/single_module_valid.move:4:7
  │
4 │     #[verify_only]
  │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/single_module_valid.move:10:7
   │
10 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/single_module_valid.move:14:7
   │
14 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

